--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <tr>
         <td>
           1997 - 1999</td>
-        <td>Consutlant, Keane Inc.</td>
+        <td>Consultant, Keane Inc.</td>
       </tr>
     </tbody>
     <tfoot>
